force-app/main/default/objects/Integration_Response__c/Integration_Response__c.object-meta.xml
<CustomObject>
    <label>Integration Response</label>
    <nameField>
        <displayFormat>IR-{000000000}</displayFormat>
        <label>Integration Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>