force-app/main/default/objects/Integration_Response__c/fields/External_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Project_ID__c</fullName>
    <label>External Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>