force-app/main/default/objects/Integration_Response__c/fields/Merge_Operation_Status__c.field-meta.xml
<CustomField>
    <fullName>Merge_Operation_Status__c</fullName>
    <label>Merge Operation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>