force-app/main/default/objects/Integration_Response__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>Integration Responses</relationshipLabel>
    <relationshipName>Integration_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>