force-app/main/default/objects/Integration_Response__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Integration_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Merge_Operation_Status__c</columns>
    <columns>Project__c</columns>
    <columns>Response_Message__c</columns>
    <columns>Response_Payload__c</columns>
    <columns>Response_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>