force-app/main/default/objects/Integration_Response__c/listViews/Created_today.listView-meta.xml
<ListView>
    <fullName>Created_today</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Integration_ID__c</columns>
    <columns>ChangeProjStatus_Operation_Status__c</columns>
    <columns>Response_Message__c</columns>
    <columns>External_Project_ID__c</columns>
    <columns>Response_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created today</label>
    <language>en_US</language>
</ListView>