force-app/main/default/objects/Integration_Response__c/listViews/Project_Search.listView-meta.xml
<ListView>
    <fullName>Project_Search</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Response_Status__c</columns>
    <columns>Response_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>P-003661</value>
    </filters>
    <label>Project Search</label>
    <language>en_US</language>
</ListView>